# xkb2midi

./: CMakeLists.txt  LICENSE  README.md  main.cpp  midiprocess.cpp  midiprocess.hpp
example_configs/: xkb2midi.cfg
